istio-scaling-experiment/yaml/rollout/gateway.yaml
# kubetpl:syntax:$

# kubetpl:set:NAMESPACE=default
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apps-gateway
  namespace: $NAMESPACE
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.example.com"
